// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should display error icon 1`] = `
.c0 {
  line-height: 1em;
  vertical-align: middle;
}

.c0 > svg {
  height: 1em;
  fill: #ffffff;
}

<i
  class="c0 svg-icon"
>
  <svg>
    error.svg
  </svg>
</i>
`;

exports[`Icon should display info icon 1`] = `
.c0 {
  line-height: 1em;
  vertical-align: middle;
}

.c0 > svg {
  height: 1em;
  fill: #ffffff;
}

<i
  class="c0 svg-icon"
>
  <svg>
    info.svg
  </svg>
</i>
`;

exports[`Icon should display loading icon 1`] = `
.c0 {
  line-height: 1em;
  vertical-align: middle;
}

.c0 > svg {
  height: 1em;
  fill: #ffffff;
}

.c1 {
  -webkit-animation: cqkDSr 1s infinite linear;
  animation: cqkDSr 1s infinite linear;
}

<i
  class="c0 svg-icon"
>
  <svg
    class="c1"
  >
    loading.svg
  </svg>
</i>
`;

exports[`Icon should display success icon 1`] = `
.c0 {
  line-height: 1em;
  vertical-align: middle;
}

.c0 > svg {
  height: 1em;
  fill: #ffffff;
}

<Icon
  type="success"
>
  <styled.i
    className="svg-icon"
  >
    <i
      className="c0 svg-icon"
    >
      <ForwardRef(SvgSuccess)>
        <svg>
          success.svg
        </svg>
      </ForwardRef(SvgSuccess)>
    </i>
  </styled.i>
</Icon>
`;

exports[`Icon should display warn icon 1`] = `
.c0 {
  line-height: 1em;
  vertical-align: middle;
}

.c0 > svg {
  height: 1em;
  fill: #ffffff;
}

<i
  class="c0 svg-icon"
>
  <svg>
    warn.svg
  </svg>
</i>
`;
